First commit (Just a test, no functionality)

--- a/AngSeedServer/nbproject/project.properties
+++ b/AngSeedServer/nbproject/project.properties
@@ -130,6 +130,6 @@ test.src.dir=test
 war.content.additional=\
     ${file.reference.AngSeedClient-app}
 war.ear.name=${war.name}
-war.name=AngSeedServer.war
+war.name=AngSeedServer-CA3.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
